# rust-api

./: .env.example  Cargo.toml  comandos_cargo.txt  comandos_sqlx.txt  docker-compose.yml  readme.md
migrations/: 20250215212534_init.up.sql
src/: lib.rs  main.rs  model.rs  schema.rs  services.rs
src/application/: task_service.rs
src/domain/: task.rs
src/infrastructure/: task_repository.rs
src/presentation/: routes.rs
tests/: tasks.rs
