[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-web = "4.9"
chrono = { version = "0.4.22", features = ["serde"] }  # Corrigido "chromo" para "chrono"
dotenv = "0.15.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86" 
env_logger = "0.11.6"
sqlx = { version = "0.8.3", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }